--- a/style.css
+++ b/style.css
@@ -46,6 +46,11 @@ h1,h2,h3,h4,h5,h6 {
 
 p {}
 
+.log .date {
+  font-style: italic;
+  font-size: 0.8em;
+}
+
 /* ELEMENTS*/
 
 header {
@@ -58,8 +63,9 @@ header {
   color: #ffffff;
   background-color: #232323;
   padding: 0.4em 1em;
-  margin: 0 0 1em 0;
+  margin: 0 1em 1em 0;
   display: inline-block;
+  transition: all 0.1s ease-in-out;
 }
 
 .log {
@@ -87,4 +93,15 @@ header {
     0% { opacity: 0; transform: scaleY(0%););}
     31% { opacity: 0; transform: translateY(0.5em);}
     100%   { opacity: 1; transform: translateY(0);}
+}
+
+.button:hover {
+  box-shadow: 0 0.2em 1em 0 rgba(0,0,0,0.33);
+  transform: scale(1.02) translateY(-0.03em);
+  cursor: pointer;
+}
+
+.button:active {
+  transform: scale(0.98) translateY(0.03em);
+  cursor: pointer;
 }
