--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body {
   background-color: #dedede;
   color: #232323;
   padding: 0;
+  margin: 0;
   font-family: 'Zilla Slab', sans-serif;
 }
 
@@ -45,13 +46,13 @@ section{
 }
 
 #art_log, #art_inv {
-  height: calc(40vh - 9em);
+  height: calc(40vh - 7em);
 }
 
 #log_text, #inv_text {
   overflow-y: auto;
   background-image: linear-gradient(to bottom, rgba(0,0,0,0.1) 0%, rgba(0,0,0,0) 5%, rgba(0,0,0,0) 97%, rgba(0,0,0,0.05) 100%);
-  height: calc(40vh - 13em)
+  height: calc(40vh - 11em)
 }
 
 /*TEXT*/
